assign1/cslang-initial/cslang-initial/target/CSlangParser.py
# Generated from main/CSlang/parser/CSlang.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'io.'", "'@readInt()'", "'@writeInt'", 
                     "'@readFloat()'", "'@writeFloat'", "'@readBool()'", 
                     "'@writeBool'", "'@readString()'", "'@writeString'", 
                     "<INVALID>", "<INVALID>", "'break'", "'continue'", 
                     "'if'", "'else'", "'for'", "'true'", "'false'", "'int'", 
                     "'float'", "'bool'", "'string'", "'return'", "'null'", 
                     "'class'", "'constructor'", "'var'", "'self'", "'new'", 
                     "'void'", "'const'", "'constant'", "'func'", "'array'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'='", "':='", "'+'", "'-'", "'*'", 
                     "'\\'", "'%'", "'/'", "'<-'", "'^'", "'.'", "','", 
                     "';'", "':'", "')'", "'('", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "BREAK", "CONTINUE", "IF", "ELSE", "FOR", "TRUE", 
                      "FALSE", "INT", "FLOAT", "BOOL", "STRING", "RETURN", 
                      "NULL", "CLASS", "CONSTRUCTOR", "VAR", "SELF", "NEW", 
                      "VOID", "CONST", "CONSTANT", "FUNC", "ARRAY", "NOT", 
                      "AND", "OR", "EQUAL", "NOT_EQUAL", "LESS", "GREATER", 
                      "LESS_EQUAL", "GREATER_EQUAL", "INITIAL", "ASSIGN", 
                      "PLUS", "MINUS", "MULTIPLY", "DIVIDE_I", "DIVIDE_I_L", 
                      "DIVIDE_F", "SUPER_CLASS", "STRING_CONCAT", "DOT", 
                      "COMMA", "SEMICOLON", "COLON", "RPAREN", "LPAREN", 
                      "LBRACK", "RBRACK", "LBRASE", "RBRASE", "STRING_LITERAL", 
                      "ID", "FLOAT_LITERAL", "INT_LITERAL", "BOOL_LITERAL", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_gb = 1
    RULE_static_attribute_decl = 2
    RULE_class_lst = 3
    RULE_class_dcl = 4
    RULE_class_body = 5
    RULE_method_lst = 6
    RULE_method_dcl = 7
    RULE_constructor_decl = 8
    RULE_param_lst = 9
    RULE_param = 10
    RULE_multiplying = 11
    RULE_adding = 12
    RULE_logical_bin = 13
    RULE_logical_not = 14
    RULE_relational = 15
    RULE_relat_bool = 16
    RULE_relat_int_float = 17
    RULE_expr_lst = 18
    RULE_expr = 19
    RULE_expr1 = 20
    RULE_expr2 = 21
    RULE_expr3 = 22
    RULE_expr4 = 23
    RULE_expr5 = 24
    RULE_expr6 = 25
    RULE_expr7 = 26
    RULE_expr8 = 27
    RULE_expr9 = 28
    RULE_expr10 = 29
    RULE_expr11 = 30
    RULE_statements = 31
    RULE_assign_decl = 32
    RULE_attribute_assign = 33
    RULE_attribute_decl = 34
    RULE_attribute_init_nom = 35
    RULE_attribute_init_typ = 36
    RULE_array_element_typ = 37
    RULE_if_state = 38
    RULE_for_state = 39
    RULE_break_state = 40
    RULE_continue_state = 41
    RULE_return_state = 42
    RULE_instance_method_invo_access = 43
    RULE_static_method_invo_access = 44
    RULE_block_state = 45
    RULE_lhs = 46
    RULE_index_op = 47
    RULE_id_lst = 48
    RULE_io_st = 49
    RULE_io = 50
    RULE_fm = 51
    RULE_boolean = 52
    RULE_typ = 53
    RULE_literal = 54
    RULE_array = 55

    ruleNames =  [ "program", "gb", "static_attribute_decl", "class_lst", 
                   "class_dcl", "class_body", "method_lst", "method_dcl", 
                   "constructor_decl", "param_lst", "param", "multiplying", 
                   "adding", "logical_bin", "logical_not", "relational", 
                   "relat_bool", "relat_int_float", "expr_lst", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "expr8", "expr9", "expr10", "expr11", "statements", 
                   "assign_decl", "attribute_assign", "attribute_decl", 
                   "attribute_init_nom", "attribute_init_typ", "array_element_typ", 
                   "if_state", "for_state", "break_state", "continue_state", 
                   "return_state", "instance_method_invo_access", "static_method_invo_access", 
                   "block_state", "lhs", "index_op", "id_lst", "io_st", 
                   "io", "fm", "boolean", "typ", "literal", "array" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    BLOCK_COMMENT=10
    LINE_COMMENT=11
    BREAK=12
    CONTINUE=13
    IF=14
    ELSE=15
    FOR=16
    TRUE=17
    FALSE=18
    INT=19
    FLOAT=20
    BOOL=21
    STRING=22
    RETURN=23
    NULL=24
    CLASS=25
    CONSTRUCTOR=26
    VAR=27
    SELF=28
    NEW=29
    VOID=30
    CONST=31
    CONSTANT=32
    FUNC=33
    ARRAY=34
    NOT=35
    AND=36
    OR=37
    EQUAL=38
    NOT_EQUAL=39
    LESS=40
    GREATER=41
    LESS_EQUAL=42
    GREATER_EQUAL=43
    INITIAL=44
    ASSIGN=45
    PLUS=46
    MINUS=47
    MULTIPLY=48
    DIVIDE_I=49
    DIVIDE_I_L=50
    DIVIDE_F=51
    SUPER_CLASS=52
    STRING_CONCAT=53
    DOT=54
    COMMA=55
    SEMICOLON=56
    COLON=57
    RPAREN=58
    LPAREN=59
    LBRACK=60
    RBRACK=61
    LBRASE=62
    RBRASE=63
    STRING_LITERAL=64
    ID=65
    FLOAT_LITERAL=66
    INT_LITERAL=67
    BOOL_LITERAL=68
    WS=69
    ERROR_CHAR=70
    UNCLOSE_STRING=71
    ILLEGAL_ESCAPE=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def gb(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.GbContext)
            else:
                return self.getTypedRuleContext(CSlangParser.GbContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSlangParser.CLASS) | (1 << CSlangParser.CONST) | (1 << CSlangParser.FUNC))) != 0):
                self.state = 112
                self.gb()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_lst(self):
            return self.getTypedRuleContext(CSlangParser.Class_lstContext,0)


        def method_lst(self):
            return self.getTypedRuleContext(CSlangParser.Method_lstContext,0)


        def static_attribute_decl(self):
            return self.getTypedRuleContext(CSlangParser.Static_attribute_declContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_gb

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGb" ):
                return visitor.visitGb(self)
            else:
                return visitor.visitChildren(self)




    def gb(self):

        localctx = CSlangParser.GbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_gb)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.CLASS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.class_lst()
                pass
            elif token in [CSlangParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.method_lst()
                pass
            elif token in [CSlangParser.CONST]:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.static_attribute_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Static_attribute_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CSlangParser.CONST, 0)

        def SEMICOLON(self):
            return self.getToken(CSlangParser.SEMICOLON, 0)

        def attribute_init_nom(self):
            return self.getTypedRuleContext(CSlangParser.Attribute_init_nomContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_static_attribute_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatic_attribute_decl" ):
                return visitor.visitStatic_attribute_decl(self)
            else:
                return visitor.visitChildren(self)




    def static_attribute_decl(self):

        localctx = CSlangParser.Static_attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_static_attribute_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CSlangParser.CONST)

            self.state = 126
            self.attribute_init_nom()
            self.state = 127
            self.match(CSlangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Class_dclContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Class_dclContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_lst" ):
                return visitor.visitClass_lst(self)
            else:
                return visitor.visitChildren(self)




    def class_lst(self):

        localctx = CSlangParser.Class_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_lst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 129
                    self.class_dcl()

                else:
                    raise NoViableAltException(self)
                self.state = 132 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.ID)
            else:
                return self.getToken(CSlangParser.ID, i)

        def class_body(self):
            return self.getTypedRuleContext(CSlangParser.Class_bodyContext,0)


        def SUPER_CLASS(self):
            return self.getToken(CSlangParser.SUPER_CLASS, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_class_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_dcl" ):
                return visitor.visitClass_dcl(self)
            else:
                return visitor.visitChildren(self)




    def class_dcl(self):

        localctx = CSlangParser.Class_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_dcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(CSlangParser.CLASS)
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 135
                self.match(CSlangParser.ID)
                self.state = 136
                self.match(CSlangParser.SUPER_CLASS)


            self.state = 139
            self.match(CSlangParser.ID)
            self.state = 140
            self.class_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRASE(self):
            return self.getToken(CSlangParser.LBRASE, 0)

        def RBRASE(self):
            return self.getToken(CSlangParser.RBRASE, 0)

        def method_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Method_dclContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Method_dclContext,i)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.StatementsContext)
            else:
                return self.getTypedRuleContext(CSlangParser.StatementsContext,i)


        def constructor_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Constructor_declContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Constructor_declContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_body" ):
                return visitor.visitClass_body(self)
            else:
                return visitor.visitChildren(self)




    def class_body(self):

        localctx = CSlangParser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(CSlangParser.LBRASE)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSlangParser.T__0) | (1 << CSlangParser.BREAK) | (1 << CSlangParser.CONTINUE) | (1 << CSlangParser.IF) | (1 << CSlangParser.FOR) | (1 << CSlangParser.RETURN) | (1 << CSlangParser.VAR) | (1 << CSlangParser.SELF) | (1 << CSlangParser.NEW) | (1 << CSlangParser.CONST) | (1 << CSlangParser.FUNC) | (1 << CSlangParser.LPAREN) | (1 << CSlangParser.LBRACK))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (CSlangParser.STRING_LITERAL - 64)) | (1 << (CSlangParser.ID - 64)) | (1 << (CSlangParser.FLOAT_LITERAL - 64)) | (1 << (CSlangParser.INT_LITERAL - 64)) | (1 << (CSlangParser.BOOL_LITERAL - 64)))) != 0):
                self.state = 146
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 143
                    self.method_dcl()
                    pass

                elif la_ == 2:
                    self.state = 144
                    self.statements()
                    pass

                elif la_ == 3:
                    self.state = 145
                    self.constructor_decl()
                    pass


                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(CSlangParser.RBRASE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Method_dclContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Method_dclContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_method_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_lst" ):
                return visitor.visitMethod_lst(self)
            else:
                return visitor.visitChildren(self)




    def method_lst(self):

        localctx = CSlangParser.Method_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method_lst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 153
                    self.method_dcl()

                else:
                    raise NoViableAltException(self)
                self.state = 156 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(CSlangParser.LPAREN, 0)

        def param_lst(self):
            return self.getTypedRuleContext(CSlangParser.Param_lstContext,0)


        def RPAREN(self):
            return self.getToken(CSlangParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(CSlangParser.TypContext,0)


        def block_state(self):
            return self.getTypedRuleContext(CSlangParser.Block_stateContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_method_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_dcl" ):
                return visitor.visitMethod_dcl(self)
            else:
                return visitor.visitChildren(self)




    def method_dcl(self):

        localctx = CSlangParser.Method_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method_dcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(CSlangParser.FUNC)
            self.state = 159
            self.match(CSlangParser.ID)
            self.state = 160
            self.match(CSlangParser.LPAREN)
            self.state = 161
            self.param_lst()
            self.state = 162
            self.match(CSlangParser.RPAREN)
            self.state = 163
            self.match(CSlangParser.COLON)
            self.state = 164
            self.typ()
            self.state = 165
            self.block_state()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constructor_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def CONSTRUCTOR(self):
            return self.getToken(CSlangParser.CONSTRUCTOR, 0)

        def LPAREN(self):
            return self.getToken(CSlangParser.LPAREN, 0)

        def param_lst(self):
            return self.getTypedRuleContext(CSlangParser.Param_lstContext,0)


        def RPAREN(self):
            return self.getToken(CSlangParser.RPAREN, 0)

        def block_state(self):
            return self.getTypedRuleContext(CSlangParser.Block_stateContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_constructor_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor_decl" ):
                return visitor.visitConstructor_decl(self)
            else:
                return visitor.visitChildren(self)




    def constructor_decl(self):

        localctx = CSlangParser.Constructor_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constructor_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(CSlangParser.FUNC)
            self.state = 168
            self.match(CSlangParser.CONSTRUCTOR)
            self.state = 169
            self.match(CSlangParser.LPAREN)
            self.state = 170
            self.param_lst()
            self.state = 171
            self.match(CSlangParser.RPAREN)
            self.state = 172
            self.block_state()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ParamContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def getRuleIndex(self):
            return CSlangParser.RULE_param_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_lst" ):
                return visitor.visitParam_lst(self)
            else:
                return visitor.visitChildren(self)




    def param_lst(self):

        localctx = CSlangParser.Param_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_lst)
        self._la = 0 # Token type
        try:
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.param()
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSlangParser.COMMA:
                    self.state = 175
                    self.match(CSlangParser.COMMA)
                    self.state = 176
                    self.param()
                    self.state = 181
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [CSlangParser.RPAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_lst(self):
            return self.getTypedRuleContext(CSlangParser.Id_lstContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(CSlangParser.TypContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = CSlangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.id_lst()
            self.state = 186
            self.match(CSlangParser.COLON)
            self.state = 187
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplyingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULTIPLY(self):
            return self.getToken(CSlangParser.MULTIPLY, 0)

        def DIVIDE_F(self):
            return self.getToken(CSlangParser.DIVIDE_F, 0)

        def DIVIDE_I(self):
            return self.getToken(CSlangParser.DIVIDE_I, 0)
